--- a/index.html
+++ b/index.html
@@ -1308,7 +1308,7 @@
                     </tr>
                   </table>
                   <div style="margin-top:14px;">
-                    <div style="font-weight:900; color:#0f172a; font-size:14px; margin-bottom:6px;">المفقودات التي وُجدت على الطائرة</div>
+                    <div style="font-weight:900; color:#0f172a; font-size:14px; margin-bottom:6px;">المفقودات التي وُجدت على الطائرة:</div>
                     <div class="pdfNotes">${escapeHtml(safeText(d.found_items))}</div>
                   </div>
                 </div>
